# skia-rs

./: .gitattributes  BENCHMARK.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  README.md  TODO.md  VERSIONING.md
.cargo-husky/hooks/: commit-msg  pre-commit  pre-push
.cursor/rules/: api-design.mdc  architecture.mdc  benchmarking.mdc  code-style.mdc  commands.mdc  ffi.mdc  fuzzing.mdc  gpu.mdc  testing.mdc
.github/workflows/: benchmark.yml  ci.yml  conformance.yml  fuzz.yml  release.yml
conformance/: README.md
crates/skia-rs/: Cargo.toml
crates/skia-rs-bench/: Cargo.toml
crates/skia-rs-bench/benches/: canvas_benchmarks.rs  codec_benchmarks.rs  core_benchmarks.rs  matrix_benchmarks.rs  memory_benchmarks.rs  paint_benchmarks.rs  path_benchmarks.rs  raster_benchmarks.rs  text_benchmarks.rs
crates/skia-rs-bench/examples/: memory_profile.rs  skia_comparison.rs
crates/skia-rs-bench/src/: dm.rs  lib.rs  memory.rs  skia_comparison.rs
crates/skia-rs-canvas/: Cargo.toml  README.md
crates/skia-rs-canvas/src/: canvas.rs  clip.rs  lib.rs  picture.rs  raster.rs  simd.rs  surface.rs
crates/skia-rs-codec/: Cargo.toml  README.md
crates/skia-rs-codec/src/: codec.rs  generator.rs  gpu_image.rs  image.rs  lazy_image.rs  lib.rs
crates/skia-rs-core/: Cargo.toml  README.md
crates/skia-rs-core/src/: color.rs  geometry.rs  lib.rs  matrix.rs  matrix44.rs  pixel.rs  region.rs  scalar.rs
crates/skia-rs-ffi/: Cargo.toml  README.md  cbindgen.toml
crates/skia-rs-ffi/src/: abi.rs  lib.rs
crates/skia-rs-gpu/: Cargo.toml  README.md
crates/skia-rs-gpu/src/: atlas.rs  command.rs  context.rs  debug.rs  glyph_cache.rs  gradient.rs  lib.rs  metal_backend.rs  msaa.rs  opengl_backend.rs  pipeline.rs  sdf.rs  shader.rs  stencil_cover.rs  surface.rs  tessellation.rs  texture.rs  tiling.rs  vulkan_backend.rs  wgpu_backend.rs
crates/skia-rs-node/: Cargo.toml  README.md  package.json
crates/skia-rs-node/examples/: basic_drawing.js
crates/skia-rs-node/src/: lib.rs
crates/skia-rs-paint/: Cargo.toml  README.md
crates/skia-rs-paint/src/: blend.rs  filter.rs  lib.rs  paint.rs  runtime_effect.rs  shader.rs  sksl.rs
crates/skia-rs-path/: Cargo.toml  README.md
crates/skia-rs-path/src/: builder.rs  effects.rs  lib.rs  measure.rs  ops.rs  path.rs  path_utils.rs  svg.rs
crates/skia-rs-pdf/: Cargo.toml  README.md
crates/skia-rs-pdf/src/: canvas.rs  document.rs  font.rs  image.rs  lib.rs  pdfa.rs  stream.rs  transparency.rs
crates/skia-rs-python/: Cargo.toml  README.md  pyproject.toml
crates/skia-rs-python/examples/: basic_drawing.py
crates/skia-rs-python/src/: lib.rs
crates/skia-rs-safe/: Cargo.toml
crates/skia-rs-safe/examples/: basic_drawing.rs  gpu_rendering.rs  pdf_generator.rs  svg_viewer.rs  text_rendering.rs
crates/skia-rs-safe/src/: android.rs  lib.rs  wasm.rs
crates/skia-rs-skottie/: Cargo.toml  README.md
crates/skia-rs-skottie/src/: animation.rs  expression.rs  keyframe.rs  layers.rs  lib.rs  mask.rs  model.rs  render.rs  shapes.rs  transform.rs
crates/skia-rs-svg/: Cargo.toml  README.md
crates/skia-rs-svg/src/: css.rs  dom.rs  export.rs  lib.rs  parser.rs  render.rs
crates/skia-rs-text/: Cargo.toml  README.md
crates/skia-rs-text/src/: font.rs  font_mgr.rs  lib.rs  paragraph.rs  shaper.rs  text_blob.rs  typeface.rs
crates/skia-rs/src/: lib.rs
docs/: angular.json  package.json  pnpm-lock.yaml
docs/src/: index.html  styles.css
docs/src/app/: app.config.ts  app.routes.ts  app.ts
docs/src/app/components/header/: header.component.ts
docs/src/app/components/sidebar/: sidebar.component.ts
docs/src/app/pages/doc-page/: doc-page.component.ts
docs/src/app/pages/home/: home.component.ts
docs/src/app/pages/introduction/: introduction.component.ts
docs/src/assets/docs/: ARCHITECTURE.md  EXAMPLES.md  MIGRATION.md  PERFORMANCE.md
examples/: animation.rs  basic_drawing.rs  conformance_gen.rs
fuzz/: Cargo.toml  README.md
fuzz/fuzz_targets/: fuzz_canvas.rs  fuzz_codec_gif.rs  fuzz_codec_jpeg.rs  fuzz_codec_png.rs  fuzz_codec_webp.rs  fuzz_color.rs  fuzz_format_detect.rs  fuzz_matrix.rs  fuzz_matrix44.rs  fuzz_paint.rs  fuzz_path.rs  fuzz_path_builder.rs  fuzz_path_ops.rs  fuzz_point.rs  fuzz_rect.rs  fuzz_region.rs  fuzz_svg_path.rs
include/: skia-rs.h
scripts/: build-wasm.sh  publish.sh
tests/conformance/: README.md
tests/conformance/tests/: basic_circle.json  basic_path.json  basic_rect.json  linear_gradient.json  transform_rotate.json
