[package]
name = "skia-rs-canvas"
description = "Canvas, surface, and recording for skia-rs"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation = "https://docs.rs/skia-rs-canvas"
authors.workspace = true
rust-version.workspace = true
keywords.workspace = true
categories.workspace = true
readme = "README.md"

[features]
default = ["std", "simd"]
std = ["skia-rs-core/std", "skia-rs-path/std", "skia-rs-paint/std"]
simd = []  # Enable SIMD optimizations
codec = ["dep:skia-rs-codec"]
text = ["dep:skia-rs-text"]

[dependencies]
skia-rs-core = { workspace = true }
skia-rs-path = { workspace = true }
skia-rs-paint = { workspace = true }
skia-rs-codec = { workspace = true, optional = true }
skia-rs-text = { workspace = true, optional = true }
smallvec = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
