[package]
name = "skia-rs-gpu"
description = "GPU backends for skia-rs"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation = "https://docs.rs/skia-rs-gpu"
authors.workspace = true
rust-version.workspace = true
keywords.workspace = true
categories.workspace = true
readme = "README.md"

[features]
default = ["wgpu-backend"]
vulkan = ["dep:ash"]
opengl = ["dep:glow"]
wgpu-backend = ["dep:wgpu", "dep:pollster"]

[dependencies]
skia-rs-core = { workspace = true }
skia-rs-path = { workspace = true }
skia-rs-paint = { workspace = true }
skia-rs-canvas = { workspace = true }
ash = { workspace = true, optional = true }
glow = { workspace = true, optional = true }
wgpu = { workspace = true, optional = true }
pollster = { workspace = true, optional = true }
parking_lot = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
