[package]
name = "skia-rs-paint"
description = "Paint, shaders, and effects for skia-rs"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation = "https://docs.rs/skia-rs-paint"
authors.workspace = true
rust-version.workspace = true
keywords.workspace = true
categories.workspace = true
readme = "README.md"

[dependencies]
skia-rs-core = { workspace = true }
skia-rs-path = { workspace = true }
bitflags = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
