[package]
name = "skia-rs-paint"
description = "Paint, shaders, and effects for skia-rs"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation = "https://docs.rs/skia-rs-paint"
authors.workspace = true
rust-version.workspace = true
keywords.workspace = true
categories.workspace = true
readme = "README.md"

[features]
default = ["std"]
std = ["skia-rs-core/std", "skia-rs-path/std"]
serde = ["dep:serde", "skia-rs-core/serde", "skia-rs-path/serde"]
runtime-effects = []  # Enable SkSL runtime effects

[dependencies]
skia-rs-core = { workspace = true }
skia-rs-path = { workspace = true }
bitflags = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true, optional = true }

[dev-dependencies]
proptest = { workspace = true }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
