[package]
name = "skia-rs-pdf"
description = "PDF generation for skia-rs"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation = "https://docs.rs/skia-rs-pdf"
authors.workspace = true
rust-version.workspace = true
keywords.workspace = true
categories.workspace = true
readme = "README.md"

[dependencies]
skia-rs-core = { workspace = true }
skia-rs-path = { workspace = true }
skia-rs-paint = { workspace = true }
skia-rs-canvas = { workspace = true }
skia-rs-text = { workspace = true }
pdf-writer = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
