[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "skia-rs"
version = "0.1.0"
description = "Python bindings for skia-rs - 2D graphics library"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT OR Apache-2.0" }
keywords = ["skia", "graphics", "2d", "canvas", "drawing", "image"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Rust",
    "Topic :: Multimedia :: Graphics",
]

[project.urls]
Homepage = "https://github.com/pegasusheavy/skia-rs"
Repository = "https://github.com/pegasusheavy/skia-rs"
Documentation = "https://docs.rs/skia-rs"

[tool.maturin]
features = ["pyo3/extension-module"]
python-source = "python"
module-name = "skia_rs"
