[package]
name = "skia-rs-text"
description = "Text layout and rendering for skia-rs"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation = "https://docs.rs/skia-rs-text"
authors.workspace = true
rust-version.workspace = true
keywords.workspace = true
categories.workspace = true
readme = "README.md"

[dependencies]
skia-rs-core = { workspace = true }
skia-rs-path = { workspace = true }
skia-rs-paint = { workspace = true }
rustybuzz = { workspace = true }
fontdb = { workspace = true }
ttf-parser = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
