[package]
name = "skia-rs"
description = "A pure Rust implementation of Google's Skia 2D graphics library"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation = "https://docs.rs/skia-rs"
authors.workspace = true
rust-version.workspace = true
keywords.workspace = true
categories.workspace = true
readme = "../../README.md"

[features]
default = ["std", "codec", "svg"]

# Standard library support
std = [
    "skia-rs-core/std",
    "skia-rs-path/std",
    "skia-rs-paint/std",
    "skia-rs-canvas/std",
    "skia-rs-safe/std",
]

# Serialization support
serde = [
    "skia-rs-core/serde",
    "skia-rs-path/serde",
    "skia-rs-paint/serde",
    "skia-rs-safe/serde",
]

# Image codecs
codec = ["skia-rs-codec", "skia-rs-safe/codec"]
codec-png = ["codec", "skia-rs-codec/png", "skia-rs-safe/codec-png"]
codec-jpeg = ["codec", "skia-rs-codec/jpeg", "skia-rs-safe/codec-jpeg"]
codec-webp = ["codec", "skia-rs-codec/webp", "skia-rs-safe/codec-webp"]
codec-gif = ["codec", "skia-rs-codec/gif", "skia-rs-safe/codec-gif"]
codec-avif = ["codec", "skia-rs-codec/avif", "skia-rs-safe/codec-avif"]
codec-raw = ["codec", "skia-rs-codec/raw", "skia-rs-safe/codec-raw"]
codec-all = ["codec-png", "codec-jpeg", "codec-webp", "codec-gif", "codec-avif", "codec-raw"]

# SVG support
svg = ["skia-rs-svg", "skia-rs-safe/svg"]

# PDF generation
pdf = ["skia-rs-pdf", "skia-rs-safe/pdf"]

# Text rendering
text = ["skia-rs-text", "skia-rs-safe/text"]

# Lottie/Skottie animation
skottie = ["skia-rs-skottie", "skia-rs-safe/skottie"]

# GPU backends
gpu = ["skia-rs-gpu", "skia-rs-safe/gpu"]
vulkan = ["gpu", "skia-rs-gpu/vulkan", "skia-rs-safe/vulkan"]
opengl = ["gpu", "skia-rs-gpu/opengl", "skia-rs-safe/opengl"]
metal = ["gpu", "skia-rs-gpu/metal", "skia-rs-safe/metal"]
wgpu-backend = ["gpu", "skia-rs-gpu/wgpu-backend", "skia-rs-safe/wgpu-backend"]
webgpu = ["wgpu-backend"]

# C FFI bindings
ffi = ["skia-rs-ffi"]

# All features (except platform-specific GPU backends)
full = [
    "std",
    "serde",
    "codec-all",
    "svg",
    "pdf",
    "text",
    "skottie",
    "gpu",
    "wgpu-backend",
    "ffi",
]

[dependencies]
# Core crates (always included)
skia-rs-core = { workspace = true }
skia-rs-path = { workspace = true }
skia-rs-paint = { workspace = true }
skia-rs-canvas = { workspace = true }
skia-rs-safe = { workspace = true }

# Optional crates
skia-rs-text = { workspace = true, optional = true }
skia-rs-codec = { workspace = true, optional = true }
skia-rs-svg = { workspace = true, optional = true }
skia-rs-pdf = { workspace = true, optional = true }
skia-rs-gpu = { workspace = true, optional = true }
skia-rs-skottie = { workspace = true, optional = true }
skia-rs-ffi = { workspace = true, optional = true }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
